--- a/card-news.html
+++ b/card-news.html
@@ -85,7 +85,7 @@
 					<h5 class="card-title"><span style="color: #0984fc">
 					여기 기사 제목이 들어가죠</span></h5>
 					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
+					<h6 class="font-weight-bold">
 						<span style="color:blue">
 							여기에 코멘트가 들어갑니다.
 						</span>
@@ -98,7 +98,7 @@
 					<h5 class="card-title"><span style="color: #0984fc">
 					여기 기사 제목이 들어가죠</span></h5>
 					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
+					<h6 class="font-weight-bold">
 						<span style="color:blue">
 							여기에 코멘트가 들어갑니다.
 						</span>
@@ -111,7 +111,7 @@
 					<h5 class="card-title"><span style="color: #0984fc">
 					여기 기사 제목이 들어가죠</span></h5>
 					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
+					<h6 class="font-weight-bold">
 						<span style="color:blue">
 							여기에 코멘트가 들어갑니다.
 						</span>
@@ -124,7 +124,7 @@
 					<h5 class="card-title"><span style="color: #0984fc">
 					여기 기사 제목이 들어가죠</span></h5>
 					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
+					<h6 class="font-weight-bold">
 						<span style="color:blue">
 							여기에 코멘트가 들어갑니다.
 						</span>
@@ -137,7 +137,7 @@
 					<h5 class="card-title"><span style="color: #0984fc">
 					여기 기사 제목이 들어가죠</span></h5>
 					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
+					<h6 class="font-weight-bold">
 						<span style="color:blue">
 							여기에 코멘트가 들어갑니다.
 						</span>
@@ -150,39 +150,14 @@
 					<h5 class="card-title"><span style="color: #0984fc">
 					여기 기사 제목이 들어가죠</span></h5>
 					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
+					<h6 class="font-weight-bold">
 						<span style="color:blue">
 							여기에 코멘트가 들어갑니다.
 						</span>
 					</h6>
 				</div>
 			</div>
-			<div class="card">
-				<img class="card-img-top" src="https://pix10.agoda.net/hotelImages/206/2066635/2066635_17033008060052019080.jpg?s=1024x768" alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title"><span style="color: #0984fc">
-					여기 기사 제목이 들어가죠</span></h5>
-					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
-						<span style="color:blue">
-							여기에 코멘트가 들어갑니다.
-						</span>
-					</h6>
-				</div>
-			</div>
-			<div class="card">
-				<img class="card-img-top" src="https://pix10.agoda.net/hotelImages/206/2066635/2066635_17033008060052019080.jpg?s=1024x768" alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title"><span style="color: #0984fc">
-					여기 기사 제목이 들어가죠</span></h5>
-					<p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 ...</p>
-					<h6>
-						<span style="color:blue">
-							여기에 코멘트가 들어갑니다.
-						</span>
-					</h6>
-				</div>
-			</div>
+			
 			
 			
 
