--- a/card-news.html
+++ b/card-news.html
@@ -20,7 +20,7 @@
 			font-family: 'Stylish', sans-serif;
 		}
 		.wrap{
-			width: 900px;
+			width: 800px;
 			margin: auto;
 		}
 		.comment{
@@ -36,6 +36,9 @@
 			border: solid;
 			display: block;
 
+		}
+		.margin{
+			margin: 10px 0 0 0 ;
 		}
 
 	</style>
@@ -53,17 +56,17 @@
 		</div>
 		<form>
 			<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+				<label for="exampleInputEmail1">아티클 URL</label>
+				<input type="url" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="감명깊게 읽은 기사가 있나요?">
 				
-				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+				<label for="exampleInputPassword1">간단 코멘트</label>
+				<input type="comment" class="form-control" id="exampleInputPassword1" placeholder="간단히 남겨보아요.">
+				<div>	
+					<button type="submit" class="btn btn-primary margin">기사저장</button>
+				</div>			
 			</div>
-			<div class="form-check">
-				<input type="checkbox" class="form-check-input" id="exampleCheck1">
-				<label class="form-check-label" for="exampleCheck1">Check me out</label>
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
+			
+			
 		</form>
 		<div class="card-columns">
 			<div class="card">
