--- a/mall page.html
+++ b/mall page.html
@@ -25,11 +25,12 @@
       margin: auto;
     }
     .label{
-      margin: 10px auto;
+      margin: 20px auto;
     }
     .order-btn{
-      width: 650px;
-      margin: 20px 20px 0;
+      width: 100%;
+      padding: 10px;
+      margin-right: auto;
 
     }
   </style>
@@ -53,51 +54,76 @@
     <div>
       바이엔슈테판 비투스는 현존하는 최고의 양조장에서 만든 최고의 맥주다. 비투스는 기원후 1040년 독일 바이에른 베네딕토회 수도원에 만든 양조장에서 생산한다. 이 양조장은 가장 역사가 긴 양조장으로 기네스북에 등재된 곳이다. 비투스는 저명한 맥주 대회인 ‘월드 비어 어워즈’(WBA)에서 각 부문에서 3년간 총 9개의 금메달을 획득한, 믿고 마실 만한 술이기도 하다.
     </div>
-    <div>-</div>
-    <div class="label">주문자 성함 </div>
-    <div class="form-group">
-      <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
-    </div>
+    
 
-    <div class="label">수량</div>
-    <div class="form-group">
-      <select id="disabledSelect" class="form-control">
-        <option>1병 - 7000원</option>
-        <option>2병 - 14000원</option>
-        <option>3병 - 21000</option>
-        <option>더이상은 안돼요!</option>
-      </select>
-    </div>
 
-    <div class="form-group">
-    <label for="inputAddress">주소</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="도로명 주소">
-  </div>
-
-    <div class="label">주민번호</div>
-    <form>
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="앞6자리">
+    <div class="col-auto label">
+      <label class="sr-only" for="inlineFormInputGroup">Username</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">주문자 성함
+          </div>
         </div>
-        <div class="col">
-          <input type="password" class="form-control" placeholder="뒷7자리">
-        </div>
+        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
       </div>
-    </form>
-
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-      <label class="form-check-label" for="invalidCheck">
-        성인입니다.
-      </label>
-      <div class="invalid-feedback">
-        애들은 가라!
-      </div>
-
     </div>
-    <button class="btn btn-primary order-btn" type="submit">주문하기</button>    
-  </div>
 
+    <div class="col-auto label">
+      <label class="sr-only" for="inlineFormInputGroup">Username</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">수량
+          </div>
+        </div>
+        <select id="disabledSelect" class="form-control">
+          <option>1병 - 7000원</option>
+          <option>2병 - 14000원</option>
+          <option>3병 - 21000원</option>
+          <option>더이상은 안돼요!</option>
+        </select>
+      </div>
+    </div>
+
+
+    <div class="col-auto label">
+      <label class="sr-only" for="inlineFormInputGroup">Username</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">주소
+          </div>
+        </div>
+        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="도로명 주소">
+      </div>
+    </div>
+
+    <div class="col-auto label">
+      <label class="sr-only" for="inlineFormInputGroup">Username</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">연락처
+          </div>
+        </div>
+        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
+      </div>
+    </div>
+
+    <div class="col-auto label">
+      <label class="sr-only" for="inlineFormInputGroup">Username</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">주민번호
+          </div>
+        </div>
+        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+        <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="">
+      </div>
+    </div>
+
+
+  </div>
+  <button class="btn btn-primary order-btn" type="submit">
+    <h3>주문하기</h3>
+  </button> 
 </body>
 </html>
