--- a/mall page.html
+++ b/mall page.html
@@ -67,6 +67,24 @@
         <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
       </div>
     </div>
+    
+
+    <div class="col-auto label">
+      <label class="sr-only" for="inlineFormInputGroup">Username</label>
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">주민번호
+          </div>
+        </div>
+        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+        <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="">
+        <button class="btn btn-primary" type="submit">
+          성인인증
+        </button> 
+      </div>
+    </div>
+
 
     <div class="col-auto label">
       <label class="sr-only" for="inlineFormInputGroup">Username</label>
@@ -107,18 +125,7 @@
       </div>
     </div>
 
-    <div class="col-auto label">
-      <label class="sr-only" for="inlineFormInputGroup">Username</label>
-      <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">주민번호
-          </div>
-        </div>
-        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
-        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
-        <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="">
-      </div>
-    </div>
+
 
 
   </div>
