--- a/mall page.html
+++ b/mall page.html
@@ -121,6 +121,17 @@
           <div class="input-group-text">연락처
           </div>
         </div>
+
+        <select id="disabledSelect" class="form-control">
+          <option>통신사</option>
+          <option>SKT</option>
+          <option>KT</option>
+          <option>LG U+</option>
+          <option>알뜰 SKT</option>
+          <option>알뜰 KT</option>
+          <option>알뜰 LG U+</option>
+        </select>
+
         <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
       </div>
     </div>
