--- a/mall page.html
+++ b/mall page.html
@@ -41,11 +41,13 @@
   <div class="card margin" >
     <img class="card-img-top" src="https://file.mk.co.kr/meet/neds/2018/03/image_readtop_2018_188888_15218388623249125.jpeg" alt="card image cap">
   </div>
-  
+  <div class= "container">
+    <h1>Weihenstephaner VITUS</h1>
+  </div>
   <div class="container">
     <div class="row align-items-end text">
       <div class="col-6">
-        <h1>Weihenstephaner VITUS</h1><h3>바이엔슈테판 비투스</h3>
+        <h3>바이엔슈테판 비투스</h3>
       </div>
       <div class="col-4">
         <h6>가격: 7000원 </h6>
