--- a/sell anything.html
+++ b/sell anything.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+
+
   <!-- Webpage Title -->
   <title>무엇이든 팔아요!</title>
 
@@ -42,7 +44,7 @@
     <img class="card-img-top" src="https://file.mk.co.kr/meet/neds/2018/03/image_readtop_2018_188888_15218388623249125.jpeg" alt="card image cap">
   </div>
   <div class= "container">
-    <h1>Weihenstephaner VITUS</h1>
+    <h1><strong><em>Weihenstephaner VITUS</strong></em></h1>
   </div>
   <div class="container">
     <div class="row align-items-end text">
