--- a/sell anything.html
+++ b/sell anything.html
@@ -18,6 +18,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+
+  <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Song+Myung&display=swap" rel="stylesheet">
+
+  <!-- style -->
   <style type="text/css">
     .margin{
       margin: 50px 100px;
@@ -33,13 +39,15 @@
       width: 100%;
       padding: 10px;
       margin-right: auto;
-
+    }
+    * {
+      font-family: 'Song Myung', serif;
     }
   </style>
-
 </head>
-<body>
 
+
+<body>
   <div class="card margin" >
     <img class="card-img-top" src="https://file.mk.co.kr/meet/neds/2018/03/image_readtop_2018_188888_15218388623249125.jpeg" alt="card image cap">
   </div>
@@ -139,10 +147,6 @@
         <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
       </div>
     </div>
-
-
-
-
   </div>
   <button class="btn btn-primary order-btn" type="submit">
     <h3>주문하기</h3>
