--- a/alcoholic.html
+++ b/alcoholic.html
@@ -5,7 +5,7 @@
 
 
   <!-- Webpage Title -->
-  <title>무엇이든 팔아요!</title>
+  <title>알콜인생</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
