--- a/1:11 P.html
+++ b/1:11 P.html
@@ -18,10 +18,10 @@
    }
    #warning-q5{
     display: none;
-   }
- </style>
+  }
+</style>
 
- <script>
+<script>
   function q1(){
             // 1. input-q1의 입력값을 가져온다.
             let text = $('#input-q1').val();
@@ -73,7 +73,7 @@
             function q5(){
               let text5 = $('#input-q5').val();
               if(text5.indexOf('@') !=-1){
-                
+
                 let result5 = text5.split('@')
                 let result51 = result5[1].split('.')
                 
@@ -100,25 +100,42 @@
 
             function q7() {
           	// 1. input-q7 값을 가져온다.
-          	// 2. 가져온 값을 이용해 names-q7에 붙일 태그를 만든다. (let temp_html = '<li>임꺽정</li>')
-          	// 3. 만들어둔 temp_html을 names-q7에 붙인다.(jQuery의 $('...').append(temp_html)을 이용하면 굿!)
             let name = $('#input-q7').val();
             let temp_html = '<li>' + name + '</li>';
-            $('#names-q7').append(temp_html);
+            $('#names-q7').append(temp_html)
+
           }
 
           function q7_remove() {
+            $('#names-q7').empty()
+
+          }
+
+          	// 2. 가져온 값을 이용해 names-q7에 붙일 태그를 만든다. (let temp_html = '<li>임꺽정</li>')
+          	// 3. 만들어둔 temp_html을 names-q7에 붙인다.(jQuery의 $('...').append(temp_html)을 이용하면 굿!)
+
           	// 1. names-q7의 내부 태그를 모두 비운다.(jQuery의 $('....').empty()를 이용하면 굿!)
-            $('#names-q7').empty();
+
            // $('#names-q7').html(''); 또한 가능!!
 
 
-         }
 
-       </script>
 
-     </head>
-     <body>
+        //    let name = $('#input-q7').val();
+        //    let temp_html = '<li>' + name + '</li>';
+        //    $('#names-q7').append(temp_html);
+        //  }
+
+        //  function q7_remove() {
+        //   $('#names-q7').empty();
+        // }
+
+
+
+      </script>
+
+    </head>
+    <body>
       <h1>JQuery+Javascript의 조합을 연습하자!</h1>
 
       <div class="question-box">
