--- a/card-news.html
+++ b/card-news.html
@@ -13,7 +13,7 @@ let temp_html = '<div class="card">\
       </div>'
 
 
-        [카드를 화면에 나타나게]
+        [카드를 화면에 나타나]
       $('#card-box').append(temp_html); -->
 
 
