--- a/alcoholic.html
+++ b/alcoholic.html
@@ -54,6 +54,27 @@
 
 
     // 주문자성함
+    function confirm(){
+      let security4 = $('#security').val();
+      var security41 = security4[0,1];
+      var regNumber = /^(?:[0-9]{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[1,2][0-9]|3[0,1]))$/
+
+
+     if (!regNumber.test($("input[id='security']").val())){
+      alert('주민번호를 정확히 입력해주세요')
+      $('#security').focus()
+      return
+     } else if (regNumber[0] > 0 && regNumber[0] < 5) {
+      alert('성인이 아닙니다')
+      return
+     }
+     else {
+      alert('인증되었습니다')
+     }
+    }
+
+
+
     function order(){
       let name2 = $('#name').val();
       let security2 = $('#security').val();
@@ -63,46 +84,54 @@
       let tele2 = $('#tele').val();
       let phone2 = $('#phone').val();
 
-      var phoneRule = /^\d{3}-\d{3,4}-\d{4}$/;
+        //유효성검사
+        var regNumber = /^[0-9]{6}$/;
+        var phoneRule = /^\d{3}-\d{3,4}-\d{4}$/;
 
 
-      if(name2 == ''){
-        alert('이름을 입력해주세요')
-        $('#name').focus()
-        return
-      } else if (security2 == ''){
-        alert('주민번호를 입력해주세요')
-        $('#security').focus()
-        return
-      } else if (security3 == ''){
-        alert('주민번호 뒷자리를 입력해주세요')
-        $('#security1').focus()
-        return
-      } else if (select2 == ''){
-        alert('수량을 선택해주세요')
-        $('#select1').focus()
-        return
-      } else if (address2 == ''){
-        alert('주소를 입력하세요')
-        $('#address').focus()
-        return
-      } else if (tele2 == ''){
-        alert('통신사를 선택하세요')
-        $('#tele').focus()
-        return
-      } else if (phone2 == ''){
-        alert('핸드폰번호를 입력하세요')
-        $('#phone').focus()
-        return
-      } else if (!phoneRule.test($("input[id='phone']").val())){
-        alert('휴대폰번호 형식이 틀립니다. 010-0000-0000으로 입력해주세요')
-        $('#phone').focus()
-        return
-      } else {
-        alert('주문이 완료되었습니다')
-        return
+
+        if(name2 == ''){
+          alert('이름을 입력해주세요')
+          $('#name').focus()
+          return
+        } else if (security2 == ''){
+          alert('주민번호를 입력해주세요')
+          $('#security').focus()
+          return
+        } else if (!regNumber.test($("input[id='security']").val())){
+          alert('주민번호를 정확히 입력해주세요')
+          $('#security').focus()
+          return
+        } else if (security3 == ''){
+          alert('주민번호 뒷자리를 입력해주세요')
+          $('#security1').focus()
+          return
+
+        } else if (select2 == ''){
+          alert('수량을 선택해주세요')
+          $('#select1').focus()
+          return
+        } else if (address2 == ''){
+          alert('주소를 입력하세요')
+          $('#address').focus()
+          return
+        } else if (tele2 == ''){
+          alert('통신사를 선택하세요')
+          $('#tele').focus()
+          return
+        } else if (phone2 == ''){
+          alert('핸드폰번호를 입력하세요')
+          $('#phone').focus()
+          return
+        } else if (!phoneRule.test($("input[id='phone']").val())){
+          alert('휴대폰번호 형식이 틀립니다. 010-0000-0000으로 입력해주세요')
+          $('#phone').focus()
+          return
+        } else {
+          alert('주문이 완료되었습니다')
+          return
+        }
       }
-    }
 
 
 //반환값을 만들고 if문 또는 if else를 사용하는 경우보다 조건이 안맞으면 바로 리턴하는 경우가 읽기 쉽다
@@ -172,7 +201,7 @@
         <input type="text" class="form-control" id="security" placeholder="">
         <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
         <input type="password" class="form-control" id="security1" placeholder="">
-        <button class="btn btn-primary" type="submit">
+        <button onclick = "confirm()" class="btn btn-primary" type="submit">
           성인인증
         </button> 
       </div>
