--- a/alcoholic.html
+++ b/alcoholic.html
@@ -40,6 +40,9 @@
       padding: 10px;
       margin-right: auto;
     }
+    .tableMargin{
+      margin: 100px 0 0 0;
+    }
     * {
       font-family: 'Song Myung', serif;
     }
@@ -60,17 +63,16 @@
       var regNumber = /^(?:[0-9]{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[1,2][0-9]|3[0,1]))$/
 
 
-     if (!regNumber.test($("input[id='security']").val())){
-      alert('주민번호를 정확히 입력해주세요')
-      $('#security').focus()
-      return
-     } else if (regNumber[0] > 0 && regNumber[0] < 5) {
-      alert('성인이 아닙니다')
-      return
-     }
-     else {
-      alert('인증되었습니다')
-     }
+      if (!regNumber.test($("input[id='security']").val())){
+        alert('주민번호를 정확히 입력해주세요')
+        $('#security').focus()
+        return
+      } else if (regNumber[0] > 0 && regNumber[0] < 5) {
+        alert('성인이 아닙니다')
+        return
+      } else {
+        alert('인증되었습니다')
+      }
     }
 
 
@@ -261,7 +263,38 @@
     <button onclick="order()" class = "btn btn-primary order-btn">
       <h3>주문하기</h3>
     </button>
-  </div>
+ 
 
-</body>
-</html>
+
+  <table class = "table tableMargin">
+    <thread>
+      <tr>
+        <th scope = "col">#</th> 
+        <th scope = "col">주문자</th>     
+        <th scope = "col">주소</th>
+        <th scope = "col">연락처</th>
+        <th scope = "col">수량</th>
+</tr>
+</thread>
+<tbody>
+
+
+  <tr>
+    <th scope = "row">1</th>
+    <td>박찬울</td>
+    <td>서울시 도봉구 방학로15길 40</td>
+    <td>010-4781-6387</td>
+  </tr>
+
+
+</tbody>
+
+
+
+  </table>
+</div>
+
+
+
+      </body>
+      </html>
