--- a/linkMemo.html
+++ b/linkMemo.html
@@ -66,7 +66,7 @@
       let articles = response['articles'];
       for (let i = 0; i < articles.length; i++){
         console.log(articles[i]);
-        make_card(articles[i]['comment'], articles[i]['desc'], articles[i]['image'], articles[i]['image'], articles[i]['title'], articles[i]['url']);
+        make_card(articles[i]['comment'], articles[i]['desc'], articles[i]['image'], articles[i]['title'], articles[i]['url']);
 
 
       }
