--- a/alcoholic.html
+++ b/alcoholic.html
@@ -55,9 +55,7 @@
     //   if security4 == 
     // }
 
-
-
-    // 주민번호 앞자리
+// 주민번호 앞자리
     function confirm(){
       let security4 = $('#security').val();
       var regNumber = /^(?:[0-9]{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[1,2][0-9]|3[0,1]))$/;
@@ -151,17 +149,55 @@
           return
         } else {
           alert('주문완료!')
+          //API값 불러오기
+          let target_url = "http://spartacodingclub.shop/order"
 
-          let temp_html = '<tr>\
-          <td>'+name2+'</td>\
-          <td>'+select2+'</td>\
-          <td>'+address2+'</td>\
-          <td>'+phone2+'</td>\
-          </tr>';
-          $('#orders-box').append(temp_html);
-          
+          $.ajax({
+            type: "GET",
+            url: target_url,
+            data: {},
+            success: function(response){
+              let orders = response['orders'];
+
+              for (let i = 0; i < orders.length; i++){
+                let order_address = orders[i]["address"];
+                let order_count = orders[i]["count"];
+                let order_name = orders[i]["name"];
+                let order_phone = orders[i]["phone"];
+
+
+                let temp_html = '<tr>\
+                <td>'+order_name+'</td>\
+                <td>'+order_count+'</td>\
+                <td>'+order_address+'</td>\
+                <td>'+order_phone+'</td>\
+                </tr>';
+
+                $('#orders_box').append(temp_html);
+              }
+
+            }
+          })
+
+
         }
-      }
+
+
+
+
+
+
+//목록에 추가하기
+      //     let temp_html = '<tr>\
+      //     <td>'+name2+'</td>\
+      //     <td>'+select2+'</td>\
+      //     <td>'+address2+'</td>\
+      //     <td>'+phone2+'</td>\
+      //     </tr>';
+      //     $('#orders-box').append(temp_html);
+
+      //   }
+      // }
 
 
 //ajax 적용실패 blocked by CORS policy
@@ -222,19 +258,8 @@
 
 
 
+</script>
 
-
-
-
-
-
-
-
-
-
-
-
-    </script>
 
 
 
